--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=vttp5_day17l
 
-server.port=3000
+server.port=8888
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
@@ -8,3 +8,14 @@ spring.data.redis.port=6379
 #spring.data.redis.password=NOT-SET makes the code not work w not set
 spring.data.redis.username=
 spring.data.redis.password=
+
+# Enable DEBUG level logging for CarparkRestService
+logging.level.sg.edu.nus.iss.day17l.restservice.CarparkRestService=DEBUG
+
+# Enable it globally
+# logging.level.root=DEBUG
+
+# Enable DEBUG level logging for CarparkRestService
+logging.level.sg.edu.nus.iss.day17l.service.CarparkService=DEBUG
+
+
