--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,15 @@ spring.data.redis.username=
 spring.data.redis.password=
 
 # Enable DEBUG level logging for CarparkRestService
-logging.level.sg.edu.nus.iss.day17l.restservice.CarparkRestService=DEBUG
-
-# Enable it globally
-# logging.level.root=DEBUG
+# logging.level.sg.edu.nus.iss.day17l.restservice.CarparkRestService=DEBUG
 
 # Enable DEBUG level logging for CarparkRestService
-logging.level.sg.edu.nus.iss.day17l.service.CarparkService=DEBUG
+# logging.level.sg.edu.nus.iss.day17l.service.CarparkService=DEBUG
+
+# logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
+# Enable it globally
+logging.level.root=DEBUG
+
 
 
